objects/Contact/fields/Acc_Name__c.field-meta.xml
<CustomField>
    <fullName>Acc_Name__c</fullName>
    <label>Acc Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>