objects/Contact/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Marketing Opt-In (Legitimate Interest)</fullName>
                <default>true</default>
                <label>Email Marketing Opt-In (Legitimate Interest)</label>
            </value>
            <value>
                <fullName>Calendar Opt-In</fullName>
            </value>
            <value>
                <fullName>Calendars Opt-Out</fullName>
            </value>
            <value>
                <fullName>Opt-Out Email Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>