objects/Contact/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>IF(ISBLANK(TEXT(Salutation)),FirstName&amp;&apos; &apos;&amp;LastName,TEXT(Salutation)&amp;&apos; &apos;&amp;FirstName&amp;&apos; &apos;&amp;LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>