objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Customers,</fullName>
            </value>
            <value>
                <fullName>Existing Customers	,</fullName>
            </value>
            <value>
                <fullName>Lapsed Customers	,</fullName>
            </value>
            <value>
                <fullName>Not Customers,</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>