objects/Contact/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Survey_Submitted_On_HS__c)),
        TODAY() - Survey_Submitted_On_HS__c &lt;= 365
    ),
    &quot;one&quot;,
    &quot;Two&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data</label>
    <type>Text</type>
</CustomField>