objects/Contact/fields/HS_Address__c.field-meta.xml
<CustomField>
    <fullName>HS_Address__c</fullName>
    <label>HS Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>