objects/Contact/fields/HS_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>HS_Mailing_Address__c</fullName>
    <label>HS Mailing Address</label>
    <type>TextArea</type>
</CustomField>