objects/Contact/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Department</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Area Manager</fullName>
            </value>
            <value>
                <fullName>Asset Manager</fullName>
            </value>
            <value>
                <fullName>Associate Dentist</fullName>
            </value>
            <value>
                <fullName>Beautician</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Business Manager</fullName>
            </value>
            <value>
                <fullName>Chaplin</fullName>
            </value>
            <value>
                <fullName>Chief Executive</fullName>
            </value>
            <value>
                <fullName>Clinical Director</fullName>
            </value>
            <value>
                <fullName>Clinical Manager</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant Dental Surgeon</fullName>
            </value>
            <value>
                <fullName>Dental Nursing Manager</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>EME Manager</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Equipment Contract Manager</fullName>
            </value>
            <value>
                <fullName>Estates</fullName>
            </value>
            <value>
                <fullName>Facilities Manager</fullName>
            </value>
            <value>
                <fullName>Finance Contact</fullName>
            </value>
            <value>
                <fullName>Governor</fullName>
            </value>
            <value>
                <fullName>Group Manager</fullName>
            </value>
            <value>
                <fullName>Group Owner</fullName>
            </value>
            <value>
                <fullName>Head Nurse</fullName>
            </value>
            <value>
                <fullName>Head of Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>