objects/Contact/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Average</fullName>
                <default>true</default>
                <label>Average</label>
            </value>
            <value>
                <fullName>Distant</fullName>
            </value>
            <value>
                <fullName>Strong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>