objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Left the company</fullName>
            </value>
            <value>
                <fullName>Main Accounts Contact</fullName>
            </value>
            <value>
                <fullName>Main Sales Contact</fullName>
            </value>
            <value>
                <fullName>Cash Sale Only</fullName>
                <isActive>false</isActive>
                <label>Cash Sale Only</label>
            </value>
            <value>
                <fullName>Dead/Closed</fullName>
                <isActive>false</isActive>
                <label>Dead/Closed</label>
            </value>
            <value>
                <fullName>Drop In Visit Suggested</fullName>
                <isActive>false</isActive>
                <label>Drop In Visit Suggested</label>
            </value>
            <value>
                <fullName>ENT Department within</fullName>
                <isActive>false</isActive>
                <label>ENT Department within</label>
            </value>
            <value>
                <fullName>Gold</fullName>
                <isActive>false</isActive>
                <label>Gold</label>
            </value>
            <value>
                <fullName>Poor</fullName>
                <isActive>false</isActive>
                <label>Poor</label>
            </value>
            <value>
                <fullName>Standard</fullName>
                <isActive>false</isActive>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>