objects/Contact/fields/Survey_Engineer_HS__c.field-meta.xml
<CustomField>
    <fullName>Survey_Engineer_HS__c</fullName>
    <label>Survey Engineer HS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>