objects/Contact/fields/Survey_Submitted_On_HS__c.field-meta.xml
<CustomField>
    <fullName>Survey_Submitted_On_HS__c</fullName>
    <label>Survey Submitted On HS</label>
    <type>Date</type>
</CustomField>