objects/Contact/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>